fix layout bugs

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,4 @@ footer a {
   footer a {
     font-size: 0.6rem;
   }
-  #book-container {
-    flex-direction: column-reverse;
-  }
 }
